@@ -9,7 +9,8 @@
  ~ = Changes   since previous version
 
 1.9 preview 12 (2011-03-??)
- ~ Cykloatlas: max zoom level extended to 16  
+ ~ Cykloatlas: max zoom level extended to 16
+ + New map source: Canada Toporama  
 
 1.9 preview 11 (2011-03-02)
  ! Error when using a BeanShell map source with certain atlas formats
